# opcua-websocket-bridge

./: Dockerfile  poetry_install_vars.sh  pyproject.toml
.github/workflows/: ci-cd.yml
tests/integration/: docker-compose.yml  test_influxdb.py
tests/integration/opc_server/: Dockerfile  requirements.txt
